feat: :rocket: Alterações para possibilitar implementação no Google Cloud Run.

--- a/.env_sample
+++ b/.env_sample
@@ -10,5 +10,7 @@ TOKEN_VALIDADE_MINUTOS=5256000000
 
 # BigQuery
 BQ_PROJETO=slug-do-projeto
-GOOGLE_ARQUIVO_CREDENCIAIS=/app/credentials.json  # use esse caminho para rodar no Docker; altere-o caso esteja rodando localmente
 ARTEFATOS_PREDICAO_URI=gs://meu-bucket
+# (Opcional) Caminho para o arquivo credentials.json (dev/local).
+# Em Cloud Run, prefira NÃO usar arquivo e sim a Service Account do próprio serviço (ADC/Workload Identity).
+GOOGLE_ARQUIVO_CREDENCIAIS=/app/credentials.json
