--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,10 @@ __pycache__
 *.pyc
 *.pyo
 *.pyd
+*.egg-info
+build
+dist
+.*_cache
 .Python
 pip-log.txt
 pip-delete-this-directory.txt
@@ -22,3 +26,4 @@ coverage.xml
 .venv
 env
 credentials.json
+
