--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,12 @@ name: Run unit tests
 
 on:
   push:
+    branches:
+      - main
 
   pull_request:
     branches:
-      - master
+      - main
 
   schedule:
     # Every sunday at 8:05 UTC
@@ -47,7 +49,7 @@ jobs:
       - name: Check Linter
         run: |
           echo "Checking linter formatting..."
-          make lint-check
+          make lint
 
       - name: Run Tests
         run: |
