--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
       SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
       SERVICE_NAME: ip-mensageria-alocacao-api
       IMAGE_NAME: ip-mensageria-alocacao-api
+      IMAGE_TAG: ${{ github.sha }}
       IDENTITY_POOL: ${{ secrets.IDENTITY_POOL }}
       IDENTITY_PROVIDER: ${{ secrets.IDENTITY_PROVIDER }}
       PORT: 8080
@@ -44,6 +45,7 @@ jobs:
             REGION="${{ env.REGION }}" \
             SERVICE_NAME="${{ env.SERVICE_NAME }}" \
             IMAGE_NAME="${{ env.IMAGE_NAME }}" \
+            IMAGE_TAG="${{ env.IMAGE_TAG }}" \
             PORT="${{ env.PORT }}"
             ARTEFATOS_PREDICAO_URI="${{ env.ARTEFATOS_PREDICAO_URI }}" \
             JWT_ALGORITMO="${{ env.JWT_ALGORITMO }}" \
